<resources>
    <string name="app_name">Pass.et</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_study">Study</string>
    <string name="title_profile">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="average_score"><u>Average Score</u></string>
    <string name="comment">Your scores are looking great, keep up the good work</string>
    <string name="percentage">60%</string>
    <string name="title_resource">Resource</string>
    <string name="title_practice">Practice</string>
    <string name="title_activity_single_exam_summary">SingleExamSummary</string>
    <string name="retake_test">Retake this test</string>
    <string name="start">Start</string>
    <string name="question_metrics">Question Metrics</string>
    <string name="correct">Correct</string>
    <string name="attempted">Attempted</string>
    <string name="done">Done</string>
    <string name="undone">Undone</string>
    <string name="exam_score">Exam Score</string>
    <string name="time_on_exam">Time on Exam</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="progress_text">%1$d/%2$d</string>
    <string name="submit_answer">Submit Answer</string>
    <string name="show_explanation">Show Explanation</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="menu">Menu</string>
    <string name="flag">Flag</string>
    <string name="correct_answer">Correct answer : %1$s</string>
    <string name="current">CURRENT</string>
    <string name="previous_all_caps">PREVIOUS</string>
    <string name="next_all_caps">NEXT</string>
    <string name="exam_complete">You have successfully completed all questions.</string>
    <string name="see_your_score">See your score</string>
    <string name="go_back_check_answers">Go back to check answers</string>
    <string name="next_question">Next Question</string>
    <string name="bullet_text">%1$d.</string>
    <string name="complete_exam">Complete Exam</string>
    <string name="score_percentage">%1$.1f%%</string>
    <string name="title_activity_main_summary">MainSummaryActivity</string>
    <string name="all_count">All (%1$d)</string>
    <string name="correct_count">Correct (%1$d)</string>
    <string name="incorrect_count">Incorrect (%1$d)</string>
    <string name="flagged_count">Flagged (%1$d)</string>
    <string name="see_question">See Question</string>
    <string name="elapsed_time">%1$s:%2$s</string>
    <string name="read_question">Read Question Outloud</string>
    <string name="incorrect">Incorrect</string>
    <string name="reviewing">REVIEWING</string>
    <string name="flagged">Flagged</string>
    <string name="all">All</string>
    <string name="search">Search</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="search_hint">Search Pass.et</string>
    <string name="questions">Questions</string>
    <string name="daily_quizzes">Daily Quizzes</string>
    <string name="mini_mocks">Mini Mocks</string>
    <string name="notifications">Notifications</string>
    <string name="notification_alert_settings">Notification Alert Settings</string>
    <string name="mathematics_notifications">Mathematics Notifications</string>
    <string name="review_of_the_day">Review of the day</string>
    <string name="study_materials">Study Materials</string>
    <string name="study_materials_videos">Study Materials / Videos</string>
    <string name="scores">SCORES</string>
    <string name="exams">EXAMS</string>
    <string name="favorites">FAVORITES</string>
    <string name="forum">FORUM</string>
    <string name="about_to_end">You are left with only 10 seconds</string>
    <string name="time_up">You time is up</string>
    <string name="retake_exam">Retake Exam</string>
    <string name="see_results">See Results</string>
    <string name="material">MATERIAL</string>
    <string name="exam_tag">%1$d Exam Results</string>
    <string name="restart_exam">Restart Exam</string>
    <string name="title_activity_exam_details">ExamDetailsActivity</string>
    <string name="number_of_questions">Number of Questions</string>
    <string name="exam_duration">Exam Duration (in minutes)</string>
    <string name="instructions">Instructions</string>
    <string name="download">Download</string>
    <string name="load">LOAD</string>
    <string name="loading_exam">LOADING EXAM ...</string>
</resources>
