<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/extra_large_padding"
    tools:context="zewd.com.learnamharic.fragment.ExamSummaryFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        android:textColor="@color/darkerBluishGrey"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/exam_complete" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background_blue"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/see_your_score"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background_green"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/go_back_check_answers"/>

</LinearLayout>
