<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/default_padding"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/exam_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="21sp"
        android:text="Mathematics Exam 101"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:paddingTop="@dimen/default_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="3"
            android:layout_width="0dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/exam_duration" />

        <TextView
            android:id="@+id/exam_duration"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="16sp"
            android:layout_gravity="end"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:text="120" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:paddingTop="@dimen/default_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/number_of_questions" />

        <TextView
            android:id="@+id/number_of_questions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_gravity="end"
            android:gravity="end"
            android:text="10" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="21sp"
        android:text="@string/instructions"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/default_padding"
        android:gravity="center_horizontal"/>

</LinearLayout>