<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/layout_fragment_exam_summary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/notification_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:paddingTop="@dimen/small_padding"
            android:paddingBottom="@dimen/small_padding"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retake_test"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <TextView
                android:id="@+id/start_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textColor="@color/appBlack"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:gravity="center_horizontal|center_vertical"
                android:background="@drawable/button_background_png"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/subject_and_grade_container"
            android:layout_below="@id/notification_container"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/subject_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mathematics"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/blueBlack"/>

                <TextView
                    android:id="@+id/exam_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="2016 Exam Results"
                    android:layout_below="@id/subject"
                    android:textColor="@color/darkerBluishGrey"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="B+"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="@dimen/default_padding"
                android:layout_marginEnd="@dimen/default_padding"
                android:layout_centerVertical="true"
                android:background="@drawable/too_rounded_background_green" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/score_and_time_container"
            android:layout_below="@id/subject_and_grade_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/score_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/border_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exam_score"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="30%"
                    android:textColor="@color/green"
                    android:textSize="36sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/time_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/border_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_on_exam"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/time_elapsed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="30:12"
                    android:textColor="@color/blueBlack"
                    android:textSize="36sp"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/exams_menu_container"
            android:layout_below="@id/score_and_time_container"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding">

            <TextView
                android:id="@+id/filter_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:background="@drawable/rounded_background_narrow_blue_black"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/filter_correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correct"
                android:gravity="center_horizontal"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/filter_incorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incorrect"
                android:gravity="center_horizontal"
                android:layout_weight="1"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_below="@id/exams_menu_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
