<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:baselineAligned="false"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/correct_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/button_correct_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            android:textSize="21sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:background="@drawable/big_button_background_green"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/correct"
            android:textColor="@color/lightBlueBlack"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/attempted_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/button_attempted_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="8"
            android:textSize="21sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:background="@drawable/big_button_background_blue_black_rounded"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attempted"
            android:textColor="@color/lightBlueBlack"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/undone_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/button_undone_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30"
            android:textSize="21sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:background="@drawable/big_button_background_light_blue_black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/undone"
            android:textColor="@color/lightBlueBlack"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>